--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
     "styled-components": "^5.3.6",
